--- a/md-analysis.yml
+++ b/md-analysis.yml
@@ -1,18 +1,23 @@
 name: md-analysis
 channels:
+  - bioconda
   - conda-forge
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=5.1=1_gnu
+  - ansiwrap=0.8.4=py_0
   - anyio=3.5.0=py310h06a4308_0
   - argon2-cffi=21.3.0=pyhd3eb1b0_0
   - argon2-cffi-bindings=21.2.0=py310h7f8727e_0
   - asttokens=2.0.5=pyhd3eb1b0_0
   - attrs=21.4.0=pyhd3eb1b0_0
+  - autopep8=2.2.0=pyhd8ed1ab_0
   - babel=2.9.1=pyhd3eb1b0_0
   - backcall=0.2.0=pyhd3eb1b0_0
+  - backoff=2.2.1=pyhd8ed1ab_0
   - beautifulsoup4=4.11.1=py310h06a4308_0
+  - black=22.6.0=pyhd8ed1ab_0
   - blas=1.0=mkl
   - bleach=4.1.0=pyhd3eb1b0_0
   - bottleneck=1.3.5=py310ha9d4c09_0
@@ -20,16 +25,20 @@ dependencies:
   - brotli-bin=1.0.9=h5eee18b_7
   - brotlipy=0.7.0=py310h7f8727e_1002
   - bzip2=1.0.8=h7b6447c_0
-  - ca-certificates=2022.07.19=h06a4308_0
-  - certifi=2022.9.24=py310h06a4308_0
+  - ca-certificates=2024.6.2=hbcca054_0
+  - certifi=2024.6.2=pyhd8ed1ab_0
   - cffi=1.15.1=py310h74dc2b5_0
   - charset-normalizer=2.0.4=pyhd3eb1b0_0
+  - colorama=0.4.6=pyhd8ed1ab_0
   - cryptography=37.0.1=py310h9ce1e76_0
   - cycler=0.11.0=pyhd3eb1b0_0
+  - dataclasses=0.8=pyhc8e2a94_3
   - dbus=1.13.18=hb2f20db_0
+  - debuglater=1.4.4=pyhd8ed1ab_0
   - debugpy=1.5.1=py310h295c915_0
   - decorator=5.1.1=pyhd3eb1b0_0
   - defusedxml=0.7.1=pyhd3eb1b0_0
+  - distro=1.9.0=pyhd8ed1ab_0
   - entrypoints=0.4=py310h06a4308_0
   - executing=0.8.3=pyhd3eb1b0_0
   - expat=2.4.9=h6a678d5_0
@@ -41,9 +50,12 @@ dependencies:
   - glib=2.69.1=h4ff587b_1
   - gst-plugins-base=1.14.0=h8213a91_2
   - gstreamer=1.14.0=h28cd5cc_2
+  - humanize=4.9.0=pyhd8ed1ab_0
   - icu=58.2=he6710b0_3
   - idna=3.4=py310h06a4308_0
+  - importlib_resources=6.4.0=pyhd8ed1ab_0
   - intel-openmp=2021.4.0=h06a4308_3561
+  - ipdb=0.13.13=pyhd8ed1ab_0
   - ipykernel=6.15.2=py310h06a4308_0
   - ipython=8.4.0=py310h06a4308_0
   - ipython_genutils=0.2.0=pyhd3eb1b0_1
@@ -60,6 +72,7 @@ dependencies:
   - jupyterlab_pygments=0.1.2=py_0
   - jupyterlab_server=2.15.2=py310h06a4308_0
   - jupyterlab_widgets=1.0.0=pyhd3eb1b0_1
+  - jupytext=1.16.2=pyhd8ed1ab_1
   - kiwisolver=1.4.2=py310h295c915_0
   - krb5=1.19.2=hac12032_0
   - lcms2=2.12=h3be6417_0
@@ -91,16 +104,22 @@ dependencies:
   - libxml2=2.9.14=h74e7548_0
   - libxslt=1.1.35=h4e12654_0
   - lz4-c=1.9.3=h295c915_1
+  - mafft=7.505=hec16e2b_0
+  - markdown-it-py=3.0.0=pyhd8ed1ab_0
   - markupsafe=2.1.1=py310h7f8727e_0
   - matplotlib=3.5.2=py310h06a4308_0
   - matplotlib-base=3.5.2=py310hf590b9c_0
   - matplotlib-inline=0.1.6=py310h06a4308_0
+  - mdit-py-plugins=0.4.1=pyhd8ed1ab_0
+  - mdurl=0.1.2=pyhd8ed1ab_0
   - mistune=0.8.4=py310h7f8727e_1000
   - mkl=2021.4.0=h06a4308_640
   - mkl-service=2.4.0=py310h7f8727e_0
   - mkl_fft=1.3.1=py310hd6ae3a3_0
   - mkl_random=1.2.2=py310h00e6091_0
+  - monotonic=1.5=pyhd8ed1ab_1
   - munkres=1.1.4=py_0
+  - mypy_extensions=1.0.0=pyha770c72_0
   - nbclassic=0.3.5=pyhd3eb1b0_0
   - nbclient=0.5.13=py310h06a4308_0
   - nbconvert=6.4.4=py310h06a4308_0
@@ -114,24 +133,35 @@ dependencies:
   - numexpr=2.8.3=py310hcea2de6_0
   - numpy=1.22.3=py310hfa59a62_0
   - numpy-base=1.22.3=py310h9585f30_0
-  - openssl=1.1.1q=h7f8727e_0
+  - openssl=1.1.1w=h7f8727e_0
   - packaging=21.3=pyhd3eb1b0_0
   - pandas=1.4.4=py310h6a678d5_0
   - pandocfilters=1.5.0=pyhd3eb1b0_0
+  - papermill=2.3.3=pyhd8ed1ab_1
   - parso=0.8.3=pyhd3eb1b0_0
+  - pathspec=0.12.1=pyhd8ed1ab_0
   - patsy=0.5.2=py310h06a4308_1
   - pcre=8.45=h295c915_0
   - pexpect=4.8.0=pyhd3eb1b0_3
   - pickleshare=0.7.5=pyhd3eb1b0_1003
   - pillow=9.2.0=py310hace64e9_1
   - pip=22.1.2=py310h06a4308_0
+  - platformdirs=4.2.2=pyhd8ed1ab_0
+  - ploomber=0.23.2=pyhd8ed1ab_0
+  - ploomber-core=0.2.25=pyhd8ed1ab_0
+  - ploomber-engine=0.0.31=pyhd8ed1ab_0
+  - ploomber-scaffold=0.3.1=pyhd8ed1ab_0
   - ply=3.11=py310h06a4308_0
+  - posthog=3.5.0=pyhd8ed1ab_1
   - prometheus_client=0.14.1=py310h06a4308_0
   - prompt-toolkit=3.0.20=pyhd3eb1b0_0
   - psutil=5.9.0=py310h5eee18b_0
   - ptyprocess=0.7.0=pyhd3eb1b0_2
   - pure_eval=0.2.2=pyhd3eb1b0_0
+  - pycodestyle=2.11.1=pyhd8ed1ab_0
   - pycparser=2.21=pyhd3eb1b0_0
+  - pydantic=0.18.2=py_0
+  - pyflakes=3.2.0=pyhd8ed1ab_0
   - pygments=2.11.2=pyhd3eb1b0_0
   - pyopenssl=22.0.0=pyhd3eb1b0_0
   - pyparsing=3.0.9=py310h06a4308_0
@@ -141,6 +171,7 @@ dependencies:
   - python=3.10.6=haa1d7c7_1
   - python-dateutil=2.8.2=pyhd3eb1b0_0
   - python-fastjsonschema=2.16.2=py310h06a4308_0
+  - python_abi=3.10=2_cp310
   - pytz=2022.1=py310h06a4308_0
   - pyzmq=23.2.0=py310h6a678d5_0
   - qt-main=5.15.2=h327a75a_7
@@ -157,16 +188,21 @@ dependencies:
   - six=1.16.0=pyhd3eb1b0_1
   - sniffio=1.2.0=py310h06a4308_1
   - soupsieve=2.3.2.post1=py310h06a4308_0
+  - sqlalchemy=1.3.24=py310h5764c6d_1
   - sqlite=3.39.3=h5082296_0
+  - sqlparse=0.5.0=pyhd8ed1ab_0
   - stack_data=0.2.0=pyhd3eb1b0_0
   - statsmodels=0.13.2=py310h7f8727e_0
+  - tabulate=0.9.0=pyhd8ed1ab_1
   - terminado=0.13.1=py310h06a4308_0
   - testpath=0.6.0=py310h06a4308_0
+  - textwrap3=0.9.2=py_0
   - tk=8.6.12=h1ccaba5_0
   - toml=0.10.2=pyhd3eb1b0_0
   - tomli=2.0.1=py310h06a4308_0
   - tornado=6.2=py310h5eee18b_0
   - traitlets=5.1.1=pyhd3eb1b0_0
+  - typed-ast=1.5.5=py310h5eee18b_0
   - typing-extensions=4.3.0=py310h06a4308_0
   - typing_extensions=4.3.0=py310h06a4308_0
   - tzdata=2022e=h04d1e81_0
@@ -179,6 +215,7 @@ dependencies:
   - xz=5.2.6=h5eee18b_0
   - yaml=0.2.5=h7b6447c_0
   - zeromq=4.3.4=h2531618_0
+  - zipp=3.19.2=pyhd8ed1ab_0
   - zlib=1.2.13=h5eee18b_0
   - zstd=1.5.2=ha4553b6_0
   - pip:
