Updated the scripts for the revised manuscript version.

--- a/analysis/env.yaml
+++ b/analysis/env.yaml
@@ -3,6 +3,7 @@ color_codes:
   3zxw: "#976cd2"
   8ruc: "#976cd2"
   1bwv: "#75eda7"
+  7snv: "#75eda7"
   6ura: "#91da48"
   anciip: gray
   anci: gray
@@ -14,219 +15,62 @@ color_codes:
 
 experiment_01: 
   1bwv:
-    dry_dcd: "1bwv.exp01.md01.dry.dcd"
-    dry_pdb: "1bwv.exp01.md01.dry.pdb"
+    dry_dcd: "1bwv.250ns.md00.stride_4.dry.dcd"
+    dry_pdb: "1bwv.250ns.md00.dry.rechained.pdb"
     time: "extant"
   3zxw:
-    dry_dcd: "3zxw.exp01.md01.dry.dcd"
-    dry_pdb: "3zxw.exp01.md01.dry.pdb"
+    dry_dcd: "3zxw.250ns.md00.stride_4.dry.dcd"
+    dry_pdb: "3zxw.250ns.md00.dry.rechained.pdb"
     time: "extant"
   6ftl:
-    dry_dcd: "6ftl.exp01.md01.dry.dcd"
-    dry_pdb: "6ftl.exp01.md01.dry.pdb"
+    dry_dcd: "6ftl.250ns.md00.stride_4.dry.dcd"
+    dry_pdb: "6ftl.250ns.md00.dry.rechained.pdb"
     time: "extant"
   6ura:
-    dry_dcd: "6ura.exp01.md01.dry.dcd"
-    dry_pdb: "6ura.exp01.md01.dry.pdb"
+    dry_dcd: "6ura.250ns.md00.stride_4.dry.dcd"
+    dry_pdb: "6ura.250ns.md00.dry.rechained.pdb"
+    time: "extant"
+  7snv:
+    dry_dcd: "7snv.250ns.md00.stride_4.dry.dcd"
+    dry_pdb: "7snv.250ns.md00.dry.rechained.pdb"
     time: "extant"
   8ruc:
-    dry_dcd: "8ruc.exp01.md01.dry.dcd"
-    dry_pdb: "8ruc.exp01.md01.dry.pdb"
+    dry_dcd: "8ruc.250ns.md00.stride_4.dry.dcd"
+    dry_pdb: "8ruc.250ns.md00.dry.rechained.pdb"
+    time: "extant"
+  9rub:
+    dry_dcd: "9rub.250ns.md00.stride_4.dry.dcd"
+    dry_pdb: "9rub.250ns.md00.dry.rechained.pdb"
     time: "extant"
   anci:
-    dry_dcd: "anci.exp01.md01.dry.dcd"
-    dry_pdb: "anci.exp01.md01.dry.pdb"
+    dry_dcd: "anci.250ns.md00.dry.dcd"
+    dry_pdb: "anci.250ns.md00.dry.rechained.pdb"
     time: "ancient"
   anciab:
-    dry_dcd: "anciab.exp01.md01.dry.dcd"
-    dry_pdb: "anciab.exp01.md01.dry.pdb"
+    dry_dcd: "anciab.250ns.md00.dry.dcd"
+    dry_pdb: "anciab.250ns.md00.dry.rechained.pdb"
     time: "ancient"
   ancicd:
-    dry_dcd: "ancicd.exp01.md01.dry.dcd"
-    dry_pdb: "ancicd.exp01.md01.dry.pdb"
+    dry_dcd: "ancicd.250ns.md00.dry.dcd"
+    dry_pdb: "ancicd.250ns.md00.dry.rechained.pdb"
     time: "ancient"
   ancia:
-    dry_dcd: "ancia.exp01.md01.dry.dcd"
-    dry_pdb: "ancia.exp01.md01.dry.pdb"
+    dry_dcd: "ancia.250ns.md00.dry.dcd"
+    dry_pdb: "ancia.250ns.md00.dry.rechained.pdb"
     time: "ancient"
   ancib:
-    dry_dcd: "ancib.exp01.md01.dry.dcd"
-    dry_pdb: "ancib.exp01.md01.dry.pdb"
+    dry_dcd: "ancib.250ns.md00.dry.dcd"
+    dry_pdb: "ancib.250ns.md00.dry.rechained.pdb"
     time: "ancient"
   anciip:
-    dry_dcd: "anciip.exp01.md01.dry.dcd"
-    dry_pdb: "anciip.exp01.md01.dry.pdb"
+    dry_dcd: "anciip.250ns.md00.dry.dcd"
+    dry_pdb: "anciip.250ns.md00.dry.rechained.pdb"
     time: "ancient"
   ancip:
-    dry_dcd: "ancip.exp01.md01.dry.dcd"
-    dry_pdb: "ancip.exp01.md01.dry.realigned.pdb"
+    dry_dcd: "ancip.250ns.md00.dry.dcd"
+    dry_pdb: "ancip.250ns.md00.dry.rechained.pdb"
     time: "ancient"
-
-experiment_02: 
-  - code: 1bwv
-    dry_dcd: "1bwv.exp02.md01.dry.dcd"
-    dry_pdb: "1bwv.exp02.md01.dry.pdb"
-    time: "extant"
-    gas: "CO2"
-    concentration: "400mM"
-
-  - code: 1bwv
-    dry_dcd: "1bwv.exp04.md01.dry.dcd"
-    dry_pdb: "1bwv.exp04.md01.dry.pdb"
-    time: "extant"
-    gas: "MO2"
-    concentration: "400mM"
-
-  - code: 3zxw
-    dry_dcd: "3zxw.exp02.md01.dry.dcd"
-    dry_pdb: "3zxw.exp02.md01.dry.pdb"
-    time: "extant"
-    gas: "CO2"
-    concentration: "400mM"
-
-  - code: 3zxw
-    dry_dcd: "3zxw.exp04.md01.dry.dcd"
-    dry_pdb: "3zxw.exp04.md01.dry.pdb"
-    time: "extant"
-    gas: "MO2"
-    concentration: "400mM"
-
-  - code: 6ftl
-    dry_dcd: "6ftl.exp02.md01.dry.dcd"
-    dry_pdb: "6ftl.exp02.md01.dry.pdb"
-    time: "extant"
-    gas: "CO2"
-    concentration: "400mM"
-
-  - code: 6ftl
-    dry_dcd: "6ftl.exp04.md01.dry.dcd"
-    dry_pdb: "6ftl.exp04.md01.dry.pdb"
-    time: "extant"
-    gas: "MO2"
-    concentration: "400mM"
-
-  # - code: 6ura
-  #   dry_dcd: "6ura.exp02.md01.dry.dcd"
-  #   dry_pdb: "6ura.exp02.md01.dry.pdb"
-  #   time: "extant"
-  #   gas: "CO2"
-  #   concentration: "400mM"
-
-  # - code: 6ura
-  #   dry_dcd: "6ura.exp04.md01.dry.dcd"
-  #   dry_pdb: "6ura.exp04.md01.dry.pdb"
-  #   time: "extant"
-  #   gas: "MO2"
-  #   concentration: "400mM"
-
-  - code: 8ruc
-    dry_dcd: "8ruc.exp02.md01.dry.dcd"
-    dry_pdb: "8ruc.exp02.md01.dry.pdb"
-    time: "extant"
-    gas: "CO2"
-    concentration: "400mM"
-
-  - code: 8ruc
-    dry_dcd: "8ruc.exp04.md01.dry.dcd"
-    dry_pdb: "8ruc.exp04.md01.dry.pdb"
-    time: "extant"
-    gas: "MO2"
-    concentration: "400mM"
-
-  - code: anci
-    dry_dcd: "anci.exp02.md01.dry.dcd"
-    dry_pdb: "anci.exp02.md01.dry.pdb"
+  anci-wo-ssu:
+    dry_dcd: "anci_wo_ssu.250ns.md00.dry.dcd"
+    dry_pdb: "anci_wo_ssu.250ns.md00.dry.rechained.pdb"
     time: "ancient"
-    gas: "CO2"
-    concentration: "400mM"
-
-  - code: anci
-    dry_dcd: "anci.exp04.md01.dry.dcd"
-    dry_pdb: "anci.exp04.md01.dry.pdb"
-    time: "ancient"
-    gas: "MO2"
-    concentration: "400mM"
-  
-  - code: ancia
-    dry_dcd: "ancia.exp02.md01.dry.dcd"
-    dry_pdb: "ancia.exp02.md01.dry.pdb"
-    time: "ancient"
-    gas: "CO2"
-    concentration: "400mM"
-
-  - code: ancia
-    dry_dcd: "ancia.exp04.md01.dry.dcd"
-    dry_pdb: "ancia.exp04.md01.dry.pdb"
-    time: "ancient"
-    gas: "MO2"
-    concentration: "400mM"
-  
-  - code: ancib
-    dry_dcd: "ancib.exp02.md01.dry.dcd"
-    dry_pdb: "ancib.exp02.md01.dry.pdb"
-    time: "ancient"
-    gas: "CO2"
-    concentration: "400mM"
-
-  - code: ancib
-    dry_dcd: "ancib.exp04.md01.dry.dcd"
-    dry_pdb: "ancib.exp04.md01.dry.pdb"
-    time: "ancient"
-    gas: "MO2"
-    concentration: "400mM"
-
-  - code: ancicd
-    dry_dcd: "ancicd.exp02.md01.dry.dcd"
-    dry_pdb: "ancicd.exp02.md01.dry.pdb"
-    time: "ancient"
-    gas: "CO2"
-    concentration: "400mM"
-
-  - code: ancicd
-    dry_dcd: "ancicd.exp04.md01.dry.dcd"
-    dry_pdb: "ancicd.exp04.md01.dry.pdb"
-    time: "ancient"
-    gas: "MO2"
-    concentration: "400mM"
-
-  - code: anciab
-    dry_dcd: "anciab.exp02.md01.dry.dcd"
-    dry_pdb: "anciab.exp02.md01.dry.pdb"
-    time: "ancient"
-    gas: "CO2"
-    concentration: "400mM"
-
-  - code: anciab
-    dry_dcd: "anciab.exp04.md01.dry.dcd"
-    dry_pdb: "anciab.exp04.md01.dry.pdb"
-    time: "ancient"
-    gas: "MO2"
-    concentration: "400mM"
-  
-  # - code: ancip
-  #   dry_dcd: "ancip.exp02.md01.dry.dcd"
-  #   dry_pdb: "ancip.exp02.md01.dry.pdb"
-  #   time: "ancient"
-  #   gas: "CO2"
-  #   concentration: "400mM"
-
-  # - code: ancip
-  #   dry_dcd: "ancip.exp04.md01.dry.dcd"
-  #   dry_pdb: "ancip.exp04.md01.dry.pdb"
-  #   time: "ancient"
-  #   gas: "MO2"
-  #   concentration: "400mM"
-
-  # - code: anciip
-  #   dry_dcd: "anciip.exp02.md01.dry.dcd"
-  #   dry_pdb: "anciip.exp02.md01.dry.pdb"
-  #   time: "ancient"
-  #   gas: "CO2"
-  #   concentration: "400mM"
-
-  # - code: anciip
-  #   dry_dcd: "anciip.exp04.md01.dry.dcd"
-  #   dry_pdb: "anciip.exp04.md01.dry.pdb"
-  #   time: "ancient"
-  #   gas: "MO2"
-  #   concentration: "400mM"
